test/spec_vectors/simd_f32x4_arith/fail/module_3.wat
(module (func (result v128) (f32x4.sqrt (i32.const 0))))